--- a/app/index.html
+++ b/app/index.html
@@ -68,6 +68,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
         <script src="scripts/controllers/questions.js"></script>
+        <script src="scripts/controllers/charts.js"></script>
         <!-- endbuild -->
 </body>
 </html>
